# sturdy-robot

./: CMakeLists.txt  FileMatrixTest.cpp  InpArgsTest.cpp  InpOptsTest.cpp  README.md  todo.txt
InpArgs/: CMakeLists.txt  InpArgs.cpp  InpArgs.hpp  InpArgsClass.cpp  InpArgsClass.hpp  InpArgsExceptions.hpp  InpArgsValue.cpp  InpArgsValue.hpp  InpArgsValueBool.hpp  InpArgsValueNumeric.hpp  InpArgsValueString.hpp  ValidArgs.cpp  ValidArgs.hpp
InpOpts/: CMakeLists.txt  InpOpts.cpp  InpOpts.hpp  InpOptsClass.cpp  InpOptsClass.hpp  InpOptsExceptions.hpp  InpOptsValue.hpp  InpOptsValueBool.hpp  InpOptsValueNumeric.hpp  InpOptsValueString.hpp  sturdy-robot-config.hpp.in
MatrixFunctions/: CMakeLists.txt  FileExceptions.hpp  FileMatrixFunctions.cpp  FileMatrixFunctions.hpp
